--- a/llamaindex_langchain_compare/1_basic_llm.ipynb
+++ b/llamaindex_langchain_compare/1_basic_llm.ipynb
@@ -80,6 +80,7 @@
     "\n",
     "llm = OpenAI(temperature=0, model='gpt-3.5-turbo', max_tokens=50)\n",
     "\n",
+    "# system message, user message 등 정의\n",
     "messages = [\n",
     "    ChatMessage(role='system', content='Talk like a hippie'),\n",
     "    ChatMessage(role='user', content='What is AI')\n",
