--- a/excel.ipynb
+++ b/excel.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,37 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['Chroma', 'OpenAIEmbeddings'], vectorstore=<langchain.vectorstores.chroma.Chroma object at 0x7fbb705fefe0>)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='주제: Model\\n도메인: \\n논문명: A Graph Convolutional Incorporating GRU Network for Landslide Displacement Forecasting Based on Spatiotemporal Analysis of GNSS Observations\\nIF: 5.349', metadata={'저널명': 'MDPI remote sensing', '행': '56'}),\n",
+       "[Document(page_content='주제: Model\\n도메인: \\n논문명: DROPEDGE: TOWARDS DEEP GRAPH CONVOLU- TIONAL NETWORKS ON NODE CLASSIFICATION\\nIF:', metadata={'저널명': 'arXiv ', '행': '29'}),\n",
+       " Document(page_content='주제: Model\\n도메인: \\n논문명: A Graph Convolutional Incorporating GRU Network for Landslide Displacement Forecasting Based on Spatiotemporal Analysis of GNSS Observations\\nIF: 5.349', metadata={'저널명': 'MDPI remote sensing', '행': '56'}),\n",
        " Document(page_content='주제: Model\\n도메인: Traffic\\n논문명: Graph-GAN: A spatial-temporal neural network for short-term passenger flow prediction in urban rail transit systems\\nIF: 9.69', metadata={'저널명': 'transportation research part c', '행': '6'}),\n",
-       " Document(page_content='주제: Dynamic Graph\\n도메인: \\n논문명: EvolveGCN: Evolving Graph Convolutional Networks for Dynamic Graphs\\nIF:', metadata={'저널명': 'The Thirty-Fourth AAAI Conference on Artificial Intelligence (AAAI-20) ', '행': '36'}),\n",
-       " Document(page_content='주제: Model\\n도메인: Traffic\\n논문명: Spatio-Temporal Graph Convolutional Networks: A Deep Learning Framework for Traffic Forecasting\\nIF:', metadata={'저널명': 'arXiv\\xa0', '행': '64'})]"
+       " Document(page_content='주제: \\n도메인: Covid\\n논문명: Transportation, germs, culture: a dynamic graph model of COVID-19 outbreak\\nIF: 3.54', metadata={'저널명': 'Quantitative Biology', '행': '73'})]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
