--- a/llamaindex_study/2_chat_with_data.ipynb
+++ b/llamaindex_study/2_chat_with_data.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.9.42.post1'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import logging\n",
     "import sys\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
-    "logging.getLogger().addHandler(logging.StreamHandler(stream=sys.stdout))\n",
+    "\n",
+    "# logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
+    "# logging.getLogger().addHandler(logging.StreamHandler(stream=sys.stdout))\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,21 +42,22 @@
      "text": [
       "/opt/homebrew/Caskroom/miniforge/base/envs/llamaindex/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Parsing nodes: 100%|██████████| 77/77 [00:00<00:00, 319.99it/s]\n",
-      "Generating embeddings: 100%|██████████| 109/109 [00:03<00:00, 29.71it/s]\n"
+      "Parsing nodes: 100%|██████████| 103/103 [00:00<00:00, 361.35it/s]\n",
+      "Generating embeddings: 100%|██████████| 171/171 [00:05<00:00, 30.36it/s]\n"
      ]
     }
    ],
    "source": [
     "from llama_index import VectorStoreIndex, SimpleDirectoryReader\n",
     "\n",
+    "# Load the data\n",
     "documents = SimpleDirectoryReader('assets').load_data()\n",
     "index = VectorStoreIndex.from_documents(documents=documents, show_progress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +66,21 @@
     "from llama_index.postprocessor import SimilarityPostprocessor, KeywordNodePostprocessor\n",
     "from llama_index.response_synthesizers import get_response_synthesizer\n",
     "\n",
-    "\n",
+    "# Create a retriever and a query engine\n",
     "query_engine = index.as_query_engine()\n",
     "retriever = VectorIndexRetriever(\n",
     "    index=index,\n",
     "    similarity_top_k=4,\n",
     ")\n",
+    "\n",
+    "# Create Node Postprocessors\n",
+    "# exclude or required keywords can be specified\n",
     "s_processor = SimilarityPostprocessor(similarity_cutoff=0.5) # 스코어 컷오프 지정\n",
     "k_processor = KeywordNodePostprocessor(\n",
     "    exclude_keywords=['cummecial'],\n",
     "    # required_keywords=['llama2']\n",
     ")\n",
+    "\n",
     "# 디버깅을 위해서 llm으로 보내지 않음(토큰 사용 x) 쿼리 엔진을 실행하면 final answer가 나오지 않음.\n",
     "response_synthesize = get_response_synthesizer(\n",
     "    response_mode='no_text' \n",
@@ -71,36 +88,24 @@
     "query_engine = RetrieverQueryEngine(\n",
     "    retriever=retriever,\n",
     "    node_postprocessors=[k_processor, s_processor],\n",
-    "    # response_synthesizer=response_synthesize\n",
+    "    response_synthesizer=response_synthesize\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Response: Llama 2 is a collection of pretrained and fine-tuned\n",
-      "large language models (LLMs) ranging in scale from 7 billion to 70\n",
-      "billion parameters. These models, called Llama 2-Chat, are optimized\n",
-      "for dialogue use cases and have demonstrated competitiveness with\n",
-      "existing open-source chat models. They are considered to be a suitable\n",
-      "substitute for closed-source models based on evaluations for\n",
-      "helpfulness and safety. Llama 2 is made available for both research\n",
-      "and commercial use, and developers must comply with the terms of the\n",
-      "provided license and the Acceptable Use Policy. The developers of\n",
-      "Llama 2 have also provided code examples and a Responsible Use Guide\n",
-      "to assist developers in safe development and deployment. The release\n",
-      "of Llama 2 is part of an open approach to encourage responsible AI\n",
-      "innovation and collaboration within the AI community.\n",
+      "Final Response:\n",
       "______________________________________________________________________\n",
       "Source Node 1/4\n",
-      "Node ID: ff89be49-96f5-4ad9-b2a4-0f07fed644cd\n",
-      "Similarity: 0.8378943080728823\n",
+      "Node ID: 459b6762-b1c8-4fa5-a8ce-1fdf7a161297\n",
+      "Similarity: 0.8383911894933527\n",
       "Text: (2021)alsoilluminatesthedifficultiestiedtochatbot-oriented LLMs,\n",
       "with concerns ranging from privacy to misleading expertise claims.\n",
       "Deng et al. (2023) proposes a taxonomic framework to tackle these\n",
@@ -109,8 +114,8 @@
       "models. Investigati...\n",
       "______________________________________________________________________\n",
       "Source Node 2/4\n",
-      "Node ID: 6a0192c9-f1cd-4b82-aa68-d2dcfef9ce19\n",
-      "Similarity: 0.8332349740166617\n",
+      "Node ID: fe0a5ed3-7381-4a2f-b073-4cfbeac4b6c7\n",
+      "Similarity: 0.8335203294602297\n",
       "Text: Llama 2 : Open Foundation and Fine-Tuned Chat Models Hugo\n",
       "Touvron∗Louis Martin†Kevin Stone† Peter Albert Amjad Almahairi Yasmine\n",
       "Babaei Nikolay Bashlykov Soumya Batra Prajjwal Bhargava Shruti Bhosale\n",
@@ -119,8 +124,8 @@
       "Cynthia Gao ...\n",
       "______________________________________________________________________\n",
       "Source Node 3/4\n",
-      "Node ID: 6487475f-9271-40d1-82b6-8000f28cf355\n",
-      "Similarity: 0.8213534966769586\n",
+      "Node ID: 12873e19-75c4-4158-b529-47e0c371c38e\n",
+      "Similarity: 0.8218186709686821\n",
       "Text: A.7 Model Card Table 52 presents a model card (Mitchell et al.,\n",
       "2018; Anil et al., 2023) that summarizes details of the models. Model\n",
       "Details Model Developers Meta AI Variations Llama 2 comes in a range\n",
@@ -129,15 +134,14 @@
       "text o...\n",
       "______________________________________________________________________\n",
       "Source Node 4/4\n",
-      "Node ID: a5bb7a11-af2e-4565-8100-464a90700ca4\n",
-      "Similarity: 0.8196817130317882\n",
+      "Node ID: d15a9551-278b-4b80-beeb-b0ae9547c032\n",
+      "Similarity: 0.8198384204643145\n",
       "Text: NoteveryonewhousesAImodelshasgoodintentions,andconversationalAIa\n",
       "gentscouldpotentiallybe usedfornefariouspurposessuchasgeneratingmisinf\n",
       "ormationorretrievinginformationabouttopicslike bioterrorism or\n",
       "cybercrime. We have, however, made efforts to tune the models to avoid\n",
       "these topics and diminish any capabilities they might have offered for\n",
-      "those us...\n",
-      "Llama 2 is a collection of pretrained and fine-tuned large language models (LLMs) ranging in scale from 7 billion to 70 billion parameters. These models, called Llama 2-Chat, are optimized for dialogue use cases and have demonstrated competitiveness with existing open-source chat models. They are considered to be a suitable substitute for closed-source models based on evaluations for helpfulness and safety. Llama 2 is made available for both research and commercial use, and developers must comply with the terms of the provided license and the Acceptable Use Policy. The developers of Llama 2 have also provided code examples and a Responsible Use Guide to assist developers in safe development and deployment. The release of Llama 2 is part of an open approach to encourage responsible AI innovation and collaboration within the AI community.\n"
+      "those us...\n"
      ]
     }
    ],
@@ -146,7 +150,7 @@
     "\n",
     "response = query_engine.query('what is llama2?')\n",
     "pprint_response(response, show_source=True) # 보여주기만 하는 기능\n",
-    "print(response)"
+    "# 위에서 response_synthesizer를 no_text로 지정했기 때문에 response는 나오지 않고, source node만 확인"
    ]
   },
   {
