--- a/llamaindex_study/3_persist_index.ipynb
+++ b/llamaindex_study/3_persist_index.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     "# 인덱스가 존재하는지 확인하고, 없을 때만 다시 빌드\n",
     "try:\n",
     "    storage_context = StorageContext.from_defaults(persist_dir='./storage/cache/papers/llama2/')\n",
-    "    index = load_index_from_storage(storage_context)\n",
+    "    index = load_index_from_storage(storage_context) # 이게 언제 작동하고 언제 작동하지 않는지 확인이 필요함.\n",
     "    print('loading from disk')\n",
     "except:\n",
     "    documents = SimpleDirectoryReader('assets').load_data()\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,34 +96,24 @@
     "query_engine = RetrieverQueryEngine(\n",
     "    retriever=retriever,\n",
     "    node_postprocessors=[k_processor, s_processor],\n",
-    "    # response_synthesizer=response_synthesize\n",
+    "    response_synthesizer=response_synthesize\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Response: Llama 2 is a collection of pretrained and fine-tuned\n",
-      "large language models (LLMs) ranging in scale from 7 billion to 70\n",
-      "billion parameters. These models, called Llama 2-Chat, are optimized\n",
-      "for dialogue use cases and have demonstrated competitiveness with\n",
-      "existing open-source chat models. They are considered to be a suitable\n",
-      "substitute for closed-source models in terms of helpfulness and\n",
-      "safety. Llama 2 is made available for both research and commercial\n",
-      "use, and developers must comply with the terms of the provided license\n",
-      "and the Acceptable Use Policy. The responsible release of Llama 2 aims\n",
-      "to encourage responsible AI innovation and collaboration within the AI\n",
-      "community.\n",
+      "Final Response:\n",
       "______________________________________________________________________\n",
       "Source Node 1/4\n",
-      "Node ID: b8d70caa-410d-486b-bcfc-bd93e23062e7\n",
-      "Similarity: 0.8378943080728823\n",
+      "Node ID: 8eb49d24-82df-4469-abe0-95895df3af9c\n",
+      "Similarity: 0.838388859473304\n",
       "Text: (2021)alsoilluminatesthedifficultiestiedtochatbot-oriented LLMs,\n",
       "with concerns ranging from privacy to misleading expertise claims.\n",
       "Deng et al. (2023) proposes a taxonomic framework to tackle these\n",
@@ -132,8 +122,8 @@
       "models. Investigati...\n",
       "______________________________________________________________________\n",
       "Source Node 2/4\n",
-      "Node ID: a6798272-42d3-4fd3-a37a-2233bdeff9f5\n",
-      "Similarity: 0.8332609629412299\n",
+      "Node ID: c6a420ee-9f1e-49a5-ae9c-a04c5bc15d70\n",
+      "Similarity: 0.8335908836279668\n",
       "Text: Llama 2 : Open Foundation and Fine-Tuned Chat Models Hugo\n",
       "Touvron∗Louis Martin†Kevin Stone† Peter Albert Amjad Almahairi Yasmine\n",
       "Babaei Nikolay Bashlykov Soumya Batra Prajjwal Bhargava Shruti Bhosale\n",
@@ -142,8 +132,8 @@
       "Cynthia Gao ...\n",
       "______________________________________________________________________\n",
       "Source Node 3/4\n",
-      "Node ID: 0bb1cdfc-ec6a-4838-928c-2c32204cb524\n",
-      "Similarity: 0.8213534966769586\n",
+      "Node ID: c0dce086-582a-4639-9570-97af55a358b8\n",
+      "Similarity: 0.8218924617447286\n",
       "Text: A.7 Model Card Table 52 presents a model card (Mitchell et al.,\n",
       "2018; Anil et al., 2023) that summarizes details of the models. Model\n",
       "Details Model Developers Meta AI Variations Llama 2 comes in a range\n",
@@ -152,15 +142,15 @@
       "text o...\n",
       "______________________________________________________________________\n",
       "Source Node 4/4\n",
-      "Node ID: a0d9142c-801e-44d5-89c3-143411119ae2\n",
-      "Similarity: 0.8196817130317882\n",
+      "Node ID: a7b05b33-1f05-4461-8d12-1dbd4acb8259\n",
+      "Similarity: 0.8203286581960453\n",
       "Text: NoteveryonewhousesAImodelshasgoodintentions,andconversationalAIa\n",
       "gentscouldpotentiallybe usedfornefariouspurposessuchasgeneratingmisinf\n",
       "ormationorretrievinginformationabouttopicslike bioterrorism or\n",
       "cybercrime. We have, however, made efforts to tune the models to avoid\n",
       "these topics and diminish any capabilities they might have offered for\n",
       "those us...\n",
-      "Llama 2 is a collection of pretrained and fine-tuned large language models (LLMs) ranging in scale from 7 billion to 70 billion parameters. These models, called Llama 2-Chat, are optimized for dialogue use cases and have demonstrated competitiveness with existing open-source chat models. They are considered to be a suitable substitute for closed-source models in terms of helpfulness and safety. Llama 2 is made available for both research and commercial use, and developers must comply with the terms of the provided license and the Acceptable Use Policy. The responsible release of Llama 2 aims to encourage responsible AI innovation and collaboration within the AI community.\n"
+      "None\n"
      ]
     }
    ],
