--- a/llamaindex_study/4_calculate_tokens.ipynb
+++ b/llamaindex_study/4_calculate_tokens.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "데이터를 쿼리할 때 마다 인덱스를 다시 생성해야 함 -> 인덱스를 디스크에 저장하여 다음에 실행할 때 사용"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +11,7 @@
        "'0.9.42.post1'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,35 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tiktoken\n",
-    "from llama_index import ServiceContext\n",
+    "from llama_index import ServiceContext, set_global_service_context\n",
     "from llama_index.callbacks import CallbackManager, TokenCountingHandler\n",
     "\n",
+    "# openai 에서 만든 tiktoken을 사용하여 토큰 수를 계산할 수 있음.\n",
     "token_counter = TokenCountingHandler(\n",
     "    tokenizer = tiktoken.encoding_for_model(\"text-embedding-ada-002\").encode,\n",
     "    verbose = True\n",
     ")\n",
     "callback_manager = CallbackManager([token_counter])\n",
-    "service_context = ServiceContext.from_defaults(callback_manager=callback_manager)"
+    "service_context = ServiceContext.from_defaults(callback_manager=callback_manager)\n",
+    "set_global_service_context(service_context) # global context로 설정해야 index를 load할 때에도 tiktoken이 작동함"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embedding Token Usage: 72274\n",
-      "Embedding Token Usage: 7479\n",
+      "Embedding Token Usage: 77885\n",
+      "Embedding Token Usage: 53020\n",
       "persisting from disk\n",
-      "79753\n"
+      "130905\n"
      ]
     }
    ],
@@ -82,7 +77,7 @@
     "except:\n",
     "    documents = SimpleDirectoryReader('assets').load_data()\n",
     "    # 노드 파싱, 임베딩\n",
-    "    index = VectorStoreIndex.from_documents(documents=documents, service_context=service_context)\n",
+    "    index = VectorStoreIndex.from_documents(documents=documents) #, service_context=service_context) global 이기 때문에 필요 x\n",
     "    # 인덱스를 디스크에 지속적으로 가지고 있음\n",
     "    index.storage_context.persist(persist_dir='./storage/cache/papers/llama2/')\n",
     "    print('persisting from disk')\n",
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,13 +96,13 @@
      "text": [
       "Embedding Token Usage: 5\n",
       "LLM Prompt Token Usage: 1179\n",
-      "LLM Completion Token Usage: 121\n",
+      "LLM Completion Token Usage: 124\n",
       "embedding tokens : 5 \n",
       " LLM prompts : 1179 \n",
-      " LLM completions : 121 \n",
-      " Total LLM token count : 1300 \n",
+      " LLM completions : 124 \n",
+      " Total LLM token count : 1303 \n",
       "\n",
-      "Llama 2 is a collection of pretrained and fine-tuned large language models (LLMs) ranging in scale from 7 billion to 70 billion parameters. These models, specifically the Llama 2-Chat models, are optimized for dialogue use cases. They have been developed and released with the aim of outperforming open-source chat models and potentially serving as a substitute for closed-source models. The approach to fine-tuning and safety improvements of Llama 2-Chat is described in detail to enable the community to build on this work and contribute to the responsible development of LLMs.\n"
+      "Llama 2 is a collection of pretrained and fine-tuned large language models (LLMs) ranging in scale from 7 billion to 70 billion parameters. These models, specifically the Llama 2-Chat models, are optimized for dialogue use cases. They have been developed and released with the aim of outperforming open-source chat models on various benchmarks and potentially serving as a substitute for closed-source models. The approach to fine-tuning and safety improvements of Llama 2-Chat is described in detail to encourage the community to build on this work and contribute to the responsible development of LLMs.\n"
      ]
     }
    ],
@@ -119,7 +114,7 @@
     "      'LLM completions :', token_counter.completion_llm_token_count, '\\n',\n",
     "      'Total LLM token count :', token_counter.total_llm_token_count, '\\n',\n",
     ")\n",
-    "print(response)"
+    "print(response) # load 했기 때문에 token을 0개 사용함..? "
    ]
   }
  ],
